The setion settings are complete

--- a/CancherksWebApp/Pages/Option1.cshtml
+++ b/CancherksWebApp/Pages/Option1.cshtml
@@ -5,7 +5,7 @@
 
 <div class=" rervar ">
         <div class="div">
-
+        @HttpContext.Session.GetString("SessionKey");
             <div class="site-bar">
                 <div class="inline-nav-item">
                     <div class="wrapper-2">
