--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -1,9 +1,17 @@
 ﻿@page
 @model CancherksWebApp.Pages.Admin.GestionSolcitudesModel
 @{
+    var userRole = @Model.role;
+    Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
+
+    if (userRole != "2569") Response.Redirect("/ErrorPage");
 }
 
 <section class="container px-5 py-3" >
+    <h5>
+        Este es la respuestas:
+        @Model.Message
+    </h5>
     <h3 style="margin-bottom: 2rem;">Solicitudes</h3>
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
@@ -64,7 +72,8 @@
                 <p>¿Confirma que desea aprobar esta solicitud?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary button-color" data-bs-dismiss="modal" id="btnAceptar">Aceptar</button>
+                
+                <form method="post"><button type="button" class="btn btn-primary button-color" data-bs-dismiss="modal" id="btnAceptar">Aceptar</button></form>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
             </div>
         </div>
