--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -1,10 +1,9 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]  Cancherks</title>
+    <title>@ViewData["Title"]  Administración Cancherks</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
@@ -31,38 +30,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                     @{
-                       
-                        var option1IsActive = Context.Request.Path.Value.Contains("/Option1");
-                        var option2IsActive = Context.Request.Path.Value.Contains("/Option2");
-                        var option3IsActive = Context.Request.Path.Value.Contains("/Option3");
+
                         var requestManagementIsActive = Context.Request.Path.Value.Contains("/Admin/GestionSolicitudes");
-                        var reportManagementIsActive = Context.Request.Path.Value.Contains("/Admin/Reportes");
-                        var addInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/AgregarInstalacion");
-                        var modifyInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/ModificarInstalacion");
+                        var reportIsActive = Context.Request.Path.Value.Contains("/Admin/Reportes");
+                        var adminInstallation = Context.Request.Path.Value.Contains("/Admin/AgregarInstalacion");
 
                     }
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link @(option1IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option1">estoy en el layaout the requester</a>
+                            <a class="nav-link @(requestManagementIsActive ? "activeNav" : "")" asp-area="Admin" asp-page="GestionSolicitudes">Gestión Solicitudes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option2IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option2">Option2</a>
+                            <a class="nav-link @(reportIsActive ? "activeNav" : "")" asp-area="Admin" asp-page="Reportes">Reportes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option3IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option3">Option3</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(requestManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion Solicitudes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(reportManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(addInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
+                            <a class="nav-link @(adminInstallation ? "activeNav" : "")" asp-area="Admin" asp-page="AgregarInstalacion">Agregar Instalación</a>
                         </li>
                     </ul>
                 </div>
@@ -78,16 +61,36 @@
 
 
     <div class="page d-flex flex-row bg-grayContrast">
+
         <aside class="site-bar bg-white">
             <ul class="d-flex flex-column gap-3 px-0 py-2">
-                <li class="py-2 inline-nav-item ">
-                    <i class="bi bi-people-fill"></i>
-                    Instalaciones
-                </li>
-                <li class="py-2 bg-footer inline-nav-item-nd">
-                    <i class="bi bi-people-fill"></i>
-                    Instalaciones
-                </li>
+                @* //Aside section for Admin Gestion solicitudes *@
+                @if (requestManagementIsActive)
+                {
+                    <li class="py-2 inline-nav-item">
+                        <i class="bi bi-people-fill"></i>
+                        Gestion Solicitudes
+                    </li>
+
+                }
+                else if (reportIsActive)
+                {
+                    <li class="py-2 inline-nav-item ">
+                        <i class="bi bi-people-fill"></i>
+                        Crear Reporte
+                    </li>
+                }
+                else if (adminInstallation)
+                {
+                    <li class="py-2 inline-nav-item ">
+                        <i class="bi bi-people-fill"></i>
+                        Agregar Installación
+                    </li>
+                    <li class="py-2 inline-nav-item-nd ">
+                        <i class="bi bi-people-fill"></i>
+                        Modificar Installación
+                    </li>
+                }
             </ul>
 
         </aside>
