--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -9,7 +9,7 @@
 
 <section class="container px-5 py-3" >
 
-    <h3 style="margin-bottom: 2rem;">Solicitudes @Model.Message</h3>
+    <h3 style="margin-bottom: 2rem;">Solicitudes</h3>
 
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
