--- a/CancherksWebApp/Pages/ErrorPage.cshtml
+++ b/CancherksWebApp/Pages/ErrorPage.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 @model CancherksWebApp.Pages.ErrorPageModel
 @{
+    
+    Layout =  "_ErrorLayout";
+
 }
 <div style="text-align:center; margin-top:50px;">
     <h1 style="color:red;">Oops! Something went wrong.</h1>
