--- a/CancherksWebApp/Pages/Solicitante/MisReservaciones.cshtml
+++ b/CancherksWebApp/Pages/Solicitante/MisReservaciones.cshtml
@@ -18,8 +18,11 @@
     <table class="table" style="margin-top: 1rem;">
         <thead>
             <tr>
-                <th scope="col">Correo</th>
-                <th scope="col">Instalación</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido 1</th>
+                <th scope="col">Apellido 2</th>
+                <th scope="col">email</th>
+                <th scope="col">Cancha</th>
                 <th scope="col">Fecha</th>
                 <th scope="col">Hora Inicio</th>
                 <th scope="col">Hora Final</th>
@@ -28,8 +31,35 @@
         </thead>
         <tbody>
 
+                @foreach (var request in Model.Requests)
+                {
+                <tr data-installation-id="@request.IdInstallation">
+                    <td>@HttpContext.Session.GetString("name")</td>
+                    <td>@HttpContext.Session.GetString("lastName")</td>
+                    <td>@HttpContext.Session.GetString("lastName2")</td>
+                    <td>@request.EmailRequester</td>
+                    <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
+                    <td>@request.DateRequest.ToShortDateString()</td>
+                    <td>@request.StartTime.ToString()</td>
+                    <td>@request.EndTime.ToString()</td>
+                    <td>
+                        @{
+                            if (request.IdState == 2)
+                            {
+                                <i class="bi bi-check-circle-fill custom-success" style="cursor:pointer;"> Aprobado</i>
+                            }
+                            else if (request.IdState == 1)
+                            {
+                                <i class="bi bi-check-circle-fill custom-success" style="cursor:pointer;"> Pendiente</i>
+                            }
 
+                    }
+                    </td>
+                </tr>
+                }
         </tbody>
+        
+
 
     </table>
 
