--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -108,13 +108,13 @@
                     <li class="py-2 @(admin1Active ? "inline-active" : "inline-nav-item") ">
                         <a class="aside-link" asp-area="Admin" asp-page="AgregarInstalacion">
                             <i class="bi bi-card-checklist"></i>
-                            Agregar Installación
+                            Agregar Instalación
                         </a>
                     </li>
                     <li class="py-2 @(admin2Active ? "inline-active" : "inline-nav-item") ">
                         <a class="aside-link" asp-area="Admin" asp-page="ModificarInstalacion">
                             <i class="bi bi-brush-fill"></i>
-                            Modificar Installación
+                            Modificar Instalación
                         </a>
                     </li>
                 }
