--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -497,3 +497,14 @@ img {
     display: inline-block; 
 }
 
+.colorApproved{
+    color: var(--colorMain);
+}
+
+.colorRejected{
+    color: #DC3545;
+}
+
+.colorPending{
+    color: #FFC107;
+}
