--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -12,16 +12,19 @@
     <filters class="d-flex align-items-center py-3">
        
         <dropdown class="dropdown">
-            
+
             <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
                 Instalaciones
             </button>
-            <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Something else here</a></li>
+            <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownInstallations">
+                <li><a class="dropdown-item custom-dropdown-item" data-id="0" href="#">Todas</a></li>
+                @foreach (var installation in Model.Installations)
+                {
+                    <li><a class="dropdown-item custom-dropdown-item" data-id="@installation.Id" href="#">@installation.Name</a></li>
+                }
             </ul>
         </dropdown>
+
 
         <datepickers style="display: flex; justify-content: center; flex-grow: 1;">
         <form class="row me-3">
