--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -65,12 +65,8 @@
     <table class="table" style="margin-top: 1rem;">
         <thead>
             <tr>
-                <th scope="col">Elegir</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Apellido 1</th>
-                <th scope="col">Apellido 2</th>
-                <th scope="col">Carné</th>
                 <th scope="col">Correo</th>
+                <th scope="col">Instalación</th>
                 <th scope="col">Fecha</th>
                 <th scope="col">Hora Inicio</th>
                 <th scope="col">Hora Final</th>
@@ -79,49 +75,34 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><input type="checkbox" class="custom-checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
+            @foreach (var request in Model.Requests)
+            {
+                <tr data-installation-id="@request.IdInstallation">
+                    <td>@request.EmailRequester</td>
+                    <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
+                    <td>@request.DateRequest.ToShortDateString()</td>
+                    <td>@request.StartTime.ToString()</td>
+                    <td>@request.EndTime.ToString()</td>
+                    <td>@Model.Activities.FirstOrDefault(i => i.Id == request.IdActivity)?.Name</td>
+                    <td>
+                        @{
+                            if (request.IdState == 2)
+                            {
+                                <i class="bi bi-check-circle-fill custom-success  colorApproved "> @Model.States.FirstOrDefault(i => i.Id == request.IdState)?.Name</i>
+                            }
+                            else if (request.IdState == 1)
+                            {
+                                <i class="bi bi-alarm-fill colorPending" style="cursor:pointer;"> @Model.States.FirstOrDefault(i => i.Id == request.IdState)?.Name</i>
+                            }
+                            else if (request.IdState == 3)
+                            {
+                                <i class="bi bi-x-circle-fill colorRejected" style="cursor:pointer;"> @Model.States.FirstOrDefault(i => i.Id == request.IdState)?.Name</i>
+                            }
 
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
-
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
-
-            </tr>
-            
+                        }
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
 
